--- a/templates/user/shop/shop.html
+++ b/templates/user/shop/shop.html
@@ -114,7 +114,7 @@
                                             {% endif %}
                                         {% endfor %}
                                     </div><!-- End .ratings -->
-                                    <span class="ratings-text">( 0 Reviews )</span>
+                                    {% comment %} <span class="ratings-text">( 0 Reviews )</span> {% endcomment %}
                                 </div><!-- End .rating-container -->
 
                                 <div class="product-nav product-nav-dots">
@@ -305,8 +305,8 @@
                     </div><!-- End .widget -->
 
                     {% comment %} widgett 2 (size filter){% endcomment %}
-
-                    {% comment %} <div class="widget widget-collapsible">
+                    {% comment %} 
+                    <div class="widget widget-collapsible">
                         <h3 class="widget-title">
                             <a data-toggle="collapse" href="#widget-2" role="button" aria-expanded="true" aria-controls="widget-2">
                                 Size
@@ -343,7 +343,7 @@
                                 </div><!-- End .filter-items -->
                             </div><!-- End .widget-body -->
                         </div><!-- End .collapse -->
-                    </div><!-- End .widget --> {% endcomment %}
+                    </div><!-- End .widget -->  {% endcomment %}
 
 
                     {% comment %} widgett 3 {% endcomment %}
