--- a/templates/base.html
+++ b/templates/base.html
@@ -174,7 +174,7 @@
                         </button>
 
                         <a href="{% url "home" %}" class="logo">
-                            <img src="{% static 'template/assets/images/icons/flex.png' %}" alt="Molla Logo" width="105" height="25">
+                            <img src="{% static 'template/assets/images/icons/flex (2).png' %}" alt="Molla Logo" width="105" height="25">
                         </a>
                     </div><!-- End .header-left -->
 
@@ -189,12 +189,7 @@
                                     <a href="{% url "shop" %}" class="sf-with-ul">Shop</a>
 
                                 </li>
-                                {% comment %} <li>
-                                    <a href="product.html" class="sf-with-ul">Product</a>
-
-                                    
-                                </li> {% endcomment %}
-                                
+                            
                                 <li>
                                     <a href="{% url "blog" %}" class="sf-with-ul">Blog</a>
                                 </li>
