--- a/templates/user/checkout.html
+++ b/templates/user/checkout.html
@@ -100,14 +100,21 @@
                                
                             <div class="card card-dashboard">
                                 <div class="d">
+
+
+
                                     <div class="custom-control custom-radio">
                                         <input type="radio" value="{{i.id}}" id="free-shipping{{ forloop.counter }}"
-                                               name="address" class="custom-control-input">
+                                               name="address" class="custom-control-input" style="vertical-align: middle;">
                                         <label class="custom-control-label"
                                                for="free-shipping{{ forloop.counter }}">
                                             Set Default Address
                                         </label>
                                     </div><!-- End .custom-control -->
+                                    
+
+
+                                    
                                     <div class="tab-pane fade" id="tab-delete{{forloop.counter}}"
                                         role="tabpanel" aria-labelledby="tab-delete-link">
                                         <p>Are you sure delete this address.</p>
