--- a/templates/user/checkout.html
+++ b/templates/user/checkout.html
@@ -135,8 +135,8 @@
                                     </table>
                                     <br>
                                     <div class="addressmgt">
-                                        <p><a href="{% url 'editaddress' i.id %}">Edit<i
-                                                    class="fas fa-edit"></i></a>
+                                        <p><a href="{% url 'editaddress' i.id %}">Edit
+                                            <i class="fas fa-edit"></i></a>
 
                                         </p>
                                         <p><a href="{% url 'viewaddress' i.id %}">View <i
