--- a/templates/invoice/userside_invoice.html
+++ b/templates/invoice/userside_invoice.html
@@ -1,11 +1,21 @@
-
+{% load static %}
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title>A simple, clean, and responsive HTML invoice template</title>
+	<body>
+		<head>
+			<meta charset="utf-8" />
+			<title>A simple, clean, and responsive HTML invoice template</title>
+		</head>
 
 		<style>
+
+			.status {
+				display: flex;
+				flex-direction: row;
+				justify-content: space-between;
+		
+			}
+
 			.invoice-box {
 				max-width: 800px;
 				margin: auto;
@@ -98,78 +108,170 @@
 				text-align: left;
 			}
 		</style>
-	</head>
-
-	<body>
-		<div class="invoice-box">
-			<table cellpadding="0" cellspacing="0">
-				<tr class="top">
-					<td colspan="2">
-						<table>
-							<tr>
-								<td class="title">
-									<img
-										src="https://sparksuite.github.io/simple-html-invoice-template/images/logo.png"
-										style="width: 100%; max-width: 300px"
-									/>
-								</td>
-
-								<td>
-									Invoice #: 123<br />
-									Created: January 1, 2023<br />
-									Due: February 1, 2023
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-
-				<tr class="information">
-					<td colspan="2">
-						<table>
-							<tr>
-								<td>
-									Sparksuite, Inc.<br />
-									12345 Sunny Road<br />
-									Sunnyville, CA 12345
-								</td>
-
-								<td>
-									Acme Corp.<br />
-									John Doe<br />
-									john@example.com
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-
-				<div class="items">
-					<table>
-						<tr>
-							<th>Item</th>
-							<th>Price</th>
-						</tr>
-						<tr>
-							<td>Website design</td>
-							<td>$300.00</td>
-						</tr>
-						<tr>
-							<td>Hosting (3 months)</td>
-							<td>$75.00</td>
-						</tr>
-						<tr>
-							<td>Domain name (1 year)</td>
-							<td>$10.00</td>
-						</tr>
-					</table>
-				</div>
 		
-				<div class="total">
-					<h1><p>Total: $385.00</p></h1>
+
+		<div class="card">
+			<div class="card-body">
+				<div class="row">
+					{% if address %}
+					<div class="col-md-5">
+						<h5 class="card-title fw-semibold mb-4"> ORDER ADDRESS</h5>
+						<div class="card">
+		
+							<div class="card-body">
+								<table>
+		
+									<tr>
+										<td><strong>First Name</strong></td>
+										<td>:{{address.first_name}}</td>
+									</tr>
+									<tr>
+										<td><strong>Last Name</strong></td>
+										<td>:{{address.last_name}}</td>
+									</tr>
+									<tr>
+										<td><strong>Phone Number</strong></td>
+										<td>:{{address.phone}}</td>
+									</tr>
+									<tr>
+										<td><strong>Email</strong></td>
+										<td>:{{address.email}}</td>
+									</tr>
+									<tr>
+										<td><strong>Address</strong></td>
+										<td>:{{address.address}}</td>
+									</tr>
+									<tr>
+										<td><strong>Country</strong></td>
+										<td>:{{address.country}}</td>
+									</tr>
+									<tr>
+										<td><strong>City</strong></td>
+										<td>:{{address.city}}</td>
+									</tr>
+									<tr>
+										<td><strong>State</strong></td>
+										<td>:{{address.state}}</td>
+									</tr>
+									<tr>
+										<td><strong>Pincode</strong></td>
+										<td>:{{address.pincode}}</td>
+									</tr>
+									<tr>
+										<td><strong>Order note</strong></td>
+										<td>:{{address.order_note}}</td>
+									</tr>
+								</table>
+							</div>
+						</div>
+					</div>
+					{% endif %}
+					{% if orderview %}
+					<div class="col-md-5">
+						<h5 class="card-title fw-semibold mb-4"> ORDER DETAILS </h5>
+						<div class="card">
+		
+							<div class="card-body">
+								<table>
+		
+									<tr>
+										<td><strong>Order id</strong></td>
+										<td>:{{orderview.id}}</td>
+									</tr>
+		
+									<tr>
+										<td><strong>User Name</strong></td>
+										<td>{{orderview.user.first_name}}</td>
+									</tr>
+		
+									<tr>
+										<td><strong>Total price</strong></td>
+										<td>:${{orderview.total_price}}</td>
+									</tr>
+									<tr>
+										<td><strong>Payment method</strong></td>
+										<td>:{{orderview.payment_mode}}</td>
+									</tr>
+									{% if orderview.payment_mode == 'cod'  %}
+									<tr>
+										<td><strong>Payment id</strong></td>
+										<td>:None</td>
+									</tr>
+									{% else %}
+									<tr>
+										<td><strong>Payment id</strong></td>
+										<td>:{{orderview.payment_id}}</td>
+									</tr>
+									{% endif %}
+									<tr>
+										<td><strong>Tracking no</strong></td>
+										<td>:{{orderview.tracking_no}}</td>
+									</tr>
+									<tr>
+										<td><strong>Ordered date</strong></td>
+										<td>:{{orderview.created_at}}</td>
+									</tr>
+									<tr></tr>
+									<tr>
+										<td><strong>Order status</strong></td>
+										<td>:{{orderview.order_status.order_status}}</td>
+									</tr>
+									<br>
+									
+								</table>
+								<br>
+							</div>
+						</div>
+		
+					</div>
+					{% endif %}
+					<h5 class="card-title fw-semibold mb-4" style="text-align: center;">Items</h5>
+					<div class="card-body">
+						<div class="table-responsive">
+							<table class="table table-hover">
+								<thead>
+									<tr class="text-uppercase">
+				
+										<th scope="col">Product name</th>
+										<th scope="col">category</th>
+										<th scope="col">color</th>
+										<th scope="col">size</th>
+										<th scope="col">price</th>
+										<th scope="col">Quantity</th>
+								
+									</tr>
+								</thead>
+								<tbody>
+									{% for i in products %}
+									<tr class="text-uppercase">
+										{% for j in image %}
+										{% if i.variant.id == j.variant.id %}
+										<td>
+											<div style="width: 30px;" class="overflow-hidden">
+												<img class="w-100" src=" {{ j.image.url}} " alt="product image">
+											</div>
+										</td>
+										{% else %}
+										{% endif %}
+									{% endfor %}
+										<td><b>{{ i.variant.product.product_name }}</td>
+										<td><b>{{ i.variant.product.category.categories }}</td>
+										<td><b>{{ i.variant.color }}</td>
+										<td><b>{{ i.variant.size }}</td>
+										<td><b>{{ i.variant.product.product_price}}</td>
+										<td><b>{{ i.quantity }}</td>
+{% endfor %}
+									</tr>
+
+								</tbody>
+							</table>
+		
+						</div>
+					</div>
+		
 				</div>
 			</div>
-			</table>
 		</div>
+			
 	</body>
 </html>
