--- a/templates/user/userprofile/orderviewuser.html
+++ b/templates/user/userprofile/orderviewuser.html
@@ -431,7 +431,7 @@
                     </table>
                     
                         <div style="text-align: center;">
-                            <a href="{% url 'generatepdf' %}" class="btn btn-outline-primary-2">
+                            <a href="{% url 'generatepdf' view_id=orderview.id%}" class="btn btn-outline-primary-2">
                                 <h5 style="margin: 0;">Download PDF <i class="mdi mdi-file-pdf" style="font-size: x-large;"></i></h5>
                             </a>
                         </div>
